--- a/templates/junos_snmp_backout.j2
+++ b/templates/junos_snmp_backout.j2
@@ -1,4 +1,4 @@
-delete snmp contact {{ snmp_data.contact }}
+delete snmp contact
 delete snmp location {{ snmp_data.location }}
 {% for ro_comm in snmp_data.ro %}
 delete snmp community {{ ro_comm }} 
