--- a/templates/ios_snmp_backout.j2
+++ b/templates/ios_snmp_backout.j2
@@ -1,8 +1,8 @@
-no snmp contact {{ snmp_data.contact }}
-no snmp location {{ snmp_data.location }}
+no snmp-server contact 
+no snmp-server location {{ snmp_data.location }}
 {% for ro_comm in snmp_data.ro %}
-no snmp community {{ ro_comm }} ro
+no snmp-server community {{ ro_comm }} ro
 {% endfor %}  
 {% for rw_comm in snmp_data.rw %}
-no snmp community {{ rw_comm }} rw
+no snmp-server community {{ rw_comm }} rw
 {% endfor %}  
