--- a/templates/device_report.j2
+++ b/templates/device_report.j2
@@ -3,6 +3,10 @@
 <head>
   <link rel="stylesheet" href="css/main.css">
 </head>
+<div class="header">
+  <img src="rh_logo.png" alt="">
+</div>
+
 <body>
 <table>
     <thead>
