--- a/reports/css/main.css
+++ b/reports/css/main.css
@@ -6,6 +6,16 @@
 	box-sizing: border-box;
 }
 
+
+/* HEADER section ========================== */
+
+.header
+{  
+    height:75px;
+    width: 964px;
+    color:white;
+}
+
 body {
   background:#353a40;
 }
