--- a/templates/device_report.j2
+++ b/templates/device_report.j2
@@ -51,6 +51,6 @@
   </tbody>
 </table>
 
-<footer> Reported genearted on: {{ansible_date_time.date}} @ {{ansible_date_time.time}} </footer>
+{# <footer> Reported genearted on: {{ansible_date_time.date}} @ {{ansible_date_time.time}} </footer> #}
 </body>
 </html>
